Building deeper naviagation

--- a/index.html
+++ b/index.html
@@ -1,84 +1,17 @@
 <!doctype html>
 <html>
 
-<head>
-    <title>Node Authentication</title>
-    <script src="lib/jquery.js"></script>
-    <script src="lib/knockout.js"></script>
-    <script src="lib/page.js"></script>
+    <head>
+        <title>Page.js Test</title>
+        <script src="build/bundle.js"></script>
+    </head>
 
-    <script src="app.js"></script>
-
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <!-- load bootstrap css -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <!-- load fontawesome -->
-    <style>
-        body {
-            padding-top: 80px;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="container">
-        <div class="col-sm-6 col-sm-offset-3" id="loginPage" style="display:none">
-
-            <h1><span class="fa fa-sign-in"></span> Login</h1>
-
-            <!-- show any messages that come back with authentication -->
-
-
-            <!-- LOGIN FORM -->
-            <form action="/login" method="post">
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control" name="email">
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" name="password">
-                </div>
-
-                <button type="submit" class="btn btn-warning btn-lg">Login</button>
-            </form>
-
-            <hr>
-
-            <p>Need an account? <a href="/#signup">Signup</a></p>
-            <p>Or go <a href="/#">home</a>.</p>
-
-        </div>
-    
-
-        <div class="col-sm-6 col-sm-offset-3"  id="signupPage" style="display:none">
-
-            <h1><span class="fa fa-sign-in"></span> Sign Up</h1>
-
-            <!-- show any messages that come back with authentication -->
-
-
-            <!-- LOGIN FORM -->
-            <form action="/login" method="post">
-                <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control" name="email">
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" class="form-control" name="password">
-                </div>
-
-                <button type="submit" class="btn btn-warning btn-lg">SignUp</button>
-            </form>
-
-            <hr>
-
-            <p>Need an account? <a href="/#login">Login</a></p>
-            <p>Or go <a href="/#">home</a>.</p>
-
-        </div>
-    </div>
-</body>
+    <body>
+        <h1>Common header for all pages</h1>
+        <div id="layoutContainer" data-bind = "component: { name: layoutName, params: pageParams }"></div>
+        <script>
+            console.log("index");
+        </script>
+    </body>
 
 </html>
