Added individual layout pages

--- a/index.html
+++ b/index.html
@@ -1,17 +1,3 @@
-<!doctype html>
-<html>
-
-    <head>
-        <title>Page.js Test</title>
-        <script src="build/bundle.js"></script>
-    </head>
-
-    <body>
-        <h1>Common header for all pages</h1>
-        <div id="layoutContainer" data-bind = "component: { name: layoutName, params: pageParams }"></div>
-        <script>
-            console.log("index");
-        </script>
-    </body>
-
-</html>
+<script>
+    location.pathname = "/auth";
+</script>
