--- a/admin.html
+++ b/admin.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Admin</title>
+        <!--Load the bundle specific for this page for which starting point is admin-app.js-->
         <script src="build/admin-bundle.js"></script>
     </head>
 
