--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <script>
+    // by default redirect to auth page which loads login page
+    // auth page could also silently check if user is logged in and redirect 
+    // to admin or candidate page
     location.pathname = "/auth";
 </script>
